fixed label spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,33 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    /*
+    added to to understand the layout
+    border: 1px solid #B22222;
+    border-radius: 1px;
+    */
   }
   
   .row {
     display: block;
     width: 50%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
+
+    /*
+    border: 1px solid #B22222;
+    border-radius: 1px;
+    */
+
+  }
+  .label {
+    padding: 1px;
+    margin-right: 5px;
+
+    /*
+    border: 1px solid #B22222;
+    border-radius: 1px;
+    */
   }
